feat: fix github action and add gitlab pipelines
Signed-off-by: Thomas Schuetz <thomas.schuetz@dynatrace.com>

--- a/trigger-github-action/taskdefinition.yaml
+++ b/trigger-github-action/taskdefinition.yaml
@@ -12,5 +12,6 @@ spec:
         username: thschue
         repository: easy-promotion-example
         job: promotion.yaml
+        ref: main
     secureParameters:
       secret: github
